--- a/examples/all/manifests/thanos-compact-statefulSet.yaml
+++ b/examples/all/manifests/thanos-compact-statefulSet.yaml
@@ -34,7 +34,7 @@ spec:
         env:
           - name : GOOGLE_APPLICATION_CREDENTIALS
             value: /etc/secret/thanos-gcs-credentials.json
-        image: quay.io/thanos/thanos:v0.12.0
+        image: thanosio/thanos:v0.25.2
         livenessProbe:
           failureThreshold: 4
           httpGet:
